# yfinance

./: README.md  pyproject.toml
yfinance/: data.py
