[tool.poetry]
name = "yfinance"
version = "1"
description = ""
authors = ["Spok <hackershit@yandex.ru>"]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.3.0"
numpy = "1.25.2"
requests = "2.31"
multitasking = "0.0.7"
lxml = "4.9.1"
appdirs = "1.4.4"
pytz = "2022.5"
frozendict = "2.3.4"
beautifulsoup4 = "4.11.1"
html5lib = "1.1"
peewee = "3.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
